--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=springcloud
+
+spring.datasource.url=***REMOVED***
+spring.datasource.username=testcloud
+***REMOVED***
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+logging.level.org.springframework.security=DEBUG
+
