--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.username=testcloud
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 logging.level.org.springframework.security=DEBUG
+spring.thymeleaf.extras.springsecurity.enabled=true
 
