Sectioned CSS & HTML made prewiev for Files in Cloud, Upload-Limit -> Infinity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 logging.level.org.springframework.security=DEBUG
 spring.thymeleaf.extras.springsecurity.enabled=true
 
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
