--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=springcloud
 
-spring.datasource.url=jdbc:mariadb://194.164.58.11:3306/testcloud
-spring.datasource.username=testcloud
-spring.datasource.password=3e]?vcv"!Fs3KbC
+spring.datasource.url=${mariadb_url}
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 logging.level.org.springframework.security=DEBUG
