--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.application.name=springcloud
 spring.datasource.url=${mariadb_url}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
+
+
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 spring.thymeleaf.extras.springsecurity.enabled=true
 
 
