--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.thymeleaf.extras.springsecurity.enabled=true
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
-server.servlet.session.cookie.same-site=None
-server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.same-site=None
+#server.servlet.session.cookie.secure=true
