Added Webhook Functions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.thymeleaf.extras.springsecurity.enabled=true
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+spring.main.allow-bean-definition-overriding=true
+spring.task.scheduling.pool.size=1
+
 
 #server.servlet.session.cookie.same-site=None
 #server.servlet.session.cookie.secure=true
