Changed Port to :8443

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.servlet.multipart.max-request-size=-1
 spring.main.allow-bean-definition-overriding=true
 spring.task.scheduling.pool.size=1
 
+server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=changeit
