--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=springcloud
 
-spring.datasource.url=${url}
+spring.datasource.url=${url}?connectTimeout=0&socketTimeout=0&tcpKeepAlive=true&autoReconnect=true&useSSL=false
 spring.datasource.username=${user}
 spring.datasource.password=${pw}
 
@@ -10,6 +10,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.thymeleaf.extras.springsecurity.enabled=true
 
 
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 spring.main.allow-bean-definition-overriding=true
