--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=springcloud
 
-spring.datasource.url=${url}?connectTimeout=0&socketTimeout=0&tcpKeepAlive=true&autoReconnect=true&useSSL=false
-spring.datasource.username=${user}
-spring.datasource.password=${pw}
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}?connectTimeout=0&socketTimeout=0&tcpKeepAlive=true&autoReconnect=true&useSSL=false
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #logging.level.org.springframework.security=DEBUG
