--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,11 @@ spring.servlet.multipart.max-request-size=-1
 spring.main.allow-bean-definition-overriding=true
 spring.task.scheduling.pool.size=1
 
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=changeit
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=myalias
+server.port=8080
+server.ssl.enabled=false
+server.servlet.context-path=/springcloud
+server.forward-headers-strategy=framework
+
 
 #server.servlet.session.cookie.same-site=None
 #server.servlet.session.cookie.secure=true
