Calendar Popup fix, enabled Cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
 spring.thymeleaf.extras.springsecurity.enabled=true
+spring.thymeleaf.cache=true
 
 
 spring.servlet.multipart.enabled=true
