--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,60 @@
+# =========================
+# Anwendung
+# =========================
 spring.application.name=springcloud
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}?connectTimeout=0&socketTimeout=0&tcpKeepAlive=true&autoReconnect=true&useSSL=false
+# =========================
+# Datenbank (MariaDB) mit HikariCP Connection Pool
+# =========================
+spring.datasource.url=${SPRING_DATASOURCE_URL}?useSSL=false&tcpKeepAlive=true
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+# HikariCP Connection Pool optimiert
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=SpringCloudHikariCP
+
+# =========================
+# Logging
+# =========================
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+
+# =========================
+# Thymeleaf
+# =========================
 spring.thymeleaf.extras.springsecurity.enabled=true
 spring.thymeleaf.cache=true
 
-
+# =========================
+# File Upload
+# =========================
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=-1
-spring.servlet.multipart.max-request-size=-1
-spring.main.allow-bean-definition-overriding=true
-spring.task.scheduling.pool.size=1
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
+# =========================
+# Scheduling / Async
+# =========================
+spring.task.scheduling.pool.size=5
+spring.main.allow-bean-definition-overriding=true
+
+# =========================
+# Server
+# =========================
 server.port=8080
 server.ssl.enabled=false
 server.servlet.context-path=/springcloud
 server.forward-headers-strategy=framework
 
-
-#server.servlet.session.cookie.same-site=None
-#server.servlet.session.cookie.secure=true
+# =========================
+# Session / Security (für Prod anpassen)
+# =========================
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=Strict
